--- a/src/sib-week.html
+++ b/src/sib-week.html
@@ -25,6 +25,7 @@
         @apply(--layout-center-justified);
         @apply(--layout-wrap);
         width: 300px;
+        /*border: solid 1px;*/
       }
 
       .tile {
@@ -33,8 +34,8 @@
         @apply(--layout-center-justified);
 
         border-radius: 8px;
-        border-width: 1px;
-        border-style: solid;
+        /*border: 1px solid;*/
+        background: rgba(255, 255, 255, 0.15);
 
         width: 90px;
         height: 60px;
@@ -45,7 +46,7 @@
         @apply(--paper-font-common-base);
         font-size: 28px;
         font-weight: 300;
-        /*line-height: 28px;*/
+        line-height: 36px;
       }
 
       .date {
@@ -53,6 +54,14 @@
         font-size: 18px;
         font-weight: 300;
         /*text-transform: uppercase;*/
+        /*width: 100%;*/
+        /*text-align: center;*/
+        /*border-bottom: solid 1px;*/
+      }
+
+      .tile.today {
+        width: 286px;
+        height: 60px;
       }
     </style>
 
@@ -64,6 +73,11 @@
           <span class="time">[[item.time]]</span>
         </div>
       </template>
+      <div class="tile today">
+        <span class="date">[[item.date]]</span>
+        <span class="time">[[item.time]]</span>
+      </div>    
+        
 
     </div>
 
