--- a/src/sib-week.html
+++ b/src/sib-week.html
@@ -35,11 +35,15 @@
 
         border-radius: 8px;
         /*border: 1px solid;*/
-        background: rgba(255, 255, 255, 0.15);
+        background: rgba(200, 255, 200, 0.15);
 
         width: 90px;
-        height: 60px;
+        height: 70px;
         margin: 3px;
+      }
+
+      .tile.miss {
+        background: rgba(255, 100, 100, 0.15);
       }
 
       .time {
@@ -68,7 +72,7 @@
     <div class="container">
 
       <template is="dom-repeat" items="[[items]]">
-        <div class="tile">
+        <div class$="tile [[item.klass]]">
           <span class="date">[[item.date]]</span>
           <span class="time">[[item.time]]</span>
         </div>
@@ -93,7 +97,7 @@
           value: [
             { time: '07:20', date: 'Mon 03' },
             { time: '08:05', date: 'Tue 04' },
-            { time: '-', date: 'Wed 05' },
+            { time: '-', date: 'Wed 05', klass: 'miss' },
             { time: '07:22', date: 'Thu 06' },
             { time: '07:20', date: 'Fri 07' },
             { time: '09:43', date: 'Sat 08' },
