--- a/src/sib-app.html
+++ b/src/sib-app.html
@@ -15,7 +15,7 @@
     <style include="iron-flex iron-flex-alignment">
       :host {
         display: block;
-        background-color: var(--paper-blue-300);
+        background-color: var(--paper-light-blue-300);
       }
 
       .sky {
