--- a/src/sib-sun.html
+++ b/src/sib-sun.html
@@ -10,7 +10,7 @@
         width: var(--sib-sun-size, 100px);
         height: var(--sib-sun-size, 100px);
         border-radius: 50%;
-        background-color: var(--sib-sub-color, #ffeb3b);
+        background-color: var(--sib-sub-color, --paper-amber-300);
       }
     </style>
 
