--- a/src/sib-week.html
+++ b/src/sib-week.html
@@ -38,7 +38,7 @@
         /*background: rgba(200, 255, 200, 0.15);*/
 
         width: 100%;
-        height: 20px;
+        height: 16px;
         margin: 3px;
       }
 
@@ -62,7 +62,7 @@
         width: 60px;
 
         @apply(--paper-font-common-base);
-        font-size: 18px;
+        font-size: 16px;
         font-weight: 300;
         /*text-transform: uppercase;*/
         /*width: 100%;*/
@@ -77,8 +77,9 @@
         border-left-style: solid;
         border-left-width: 0;
         margin-left: 20px;
-        height: 6px;
-        opacity: 0.7;
+        height: 4px;
+        /*opacity: 0.7;*/
+        color: var(--paper-amber-300);
       }
 
       .tile.today {
