--- a/src/sib-week.html
+++ b/src/sib-week.html
@@ -39,8 +39,7 @@
         /*background: rgba(200, 255, 200, 0.15);*/
 
         width: 14%;
-        height: 100px;
-        margin: 3px;
+        height: 40px;
       }
 
       .tile.miss {
@@ -49,7 +48,7 @@
 
       .time {
         @apply(--paper-font-common-base);
-        font-size: 18px;
+        font-size: 17px;
         font-weight: 300;
         text-align: center;
         /*line-height: 36px;*/
@@ -57,7 +56,7 @@
 
       .date {
         @apply(--paper-font-common-base);
-        font-size: 18px;
+        font-size: 16px;
         font-weight: 300;
         /*text-transform: uppercase;*/
         /*width: 100%;*/
@@ -81,9 +80,34 @@
         width: 286px;
         height: 60px;
       }
+
+      svg {
+        width: 100vw;
+        height: 50vw;
+      }
     </style>
 
     <div class="container">
+
+      <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="1" height="" viewBox="0 0 200 100">
+                 
+        <!--<path d="M-50 105 L-50 10 C5 10 5 10 10 10 C 15 10 15 90 20 90 C 25 90 25 72 30 72 C40 72 40 50 50 50 C55 50 55 47 60 47 C65 47 65 62 70 62 C85 62 85 62 150 62 L 150 150 Z"
+            stroke-opacity="1" stroke="#8BC34A" fill="#4CAF50"
+            fill-opacity="1" stroke-width="2" stroke-linejoin="round"/>                -->
+
+        <path d="M-5 105 L0 10 L 18 10 L 46 40 L 74 20 L 102 15 L 130 45 L 158 50 L 186 20 L 205 20 L 205 105"
+            stroke-opacity="1" stroke="#8BC34A" fill="#4CAF50"
+            fill-opacity="1" stroke-width="2" stroke-linejoin="round"/>
+
+        <circle cx="18" cy="98" r="2" fill="red"/>
+        <circle cx="46" cy="98" r="2" fill="red"/>
+        <circle cx="74" cy="98" r="2" fill="red"/>
+        <circle cx="102" cy="98" r="2" fill="red"/>
+        <circle cx="130" cy="98" r="2" fill="red"/>
+        <circle cx="158" cy="98" r="2" fill="red"/>
+        <circle cx="186" cy="98" r="2" fill="red"/>
+        
+      </svg>
 
       <template is="dom-repeat" items="[[items]]">
         <div class$="tile [[item.klass]]">
@@ -110,12 +134,13 @@
       properties: {
         items: {
           value: [
-            { time: '07:20', date: 'M 03', marker: 'border-left-width: 20px' },
-            { time: '08:05', date: 'T 04', marker: 'border-left-width: 120px' },
-            { time: '  -  ', date: 'W 05' },
-            { time: '07:22', date: 'T 06', marker: 'border-left-width: 41px' },
-            { time: '07:20', date: 'F 07', marker: 'border-left-width: 100px' },
-            { time: '09:43', date: 'S 08', marker: 'border-left-width: 10px' },
+            { time: '07:20', date: 'Mo 03', marker: 'border-left-width: 20px' },
+            { time: '08:05', date: 'Tu 04', marker: 'border-left-width: 120px' },
+            { time: '  -  ', date: 'We 05' },
+            { time: '07:22', date: 'Th 06', marker: 'border-left-width: 41px' },
+            { time: '07:20', date: 'Fr 07', marker: 'border-left-width: 100px' },
+            { time: '09:43', date: 'Sa 08', marker: 'border-left-width: 10px' },
+            { time: '09:11', date: 'Su 09', marker: 'border-left-width: 10px' },
           ]
         }
       }
