--- a/src/sib-week.html
+++ b/src/sib-week.html
@@ -96,16 +96,16 @@
             fill-opacity="1" stroke-width="2" stroke-linejoin="round"/>                -->
 
         <path d="M-5 105 L0 10 L 18 10 L 46 40 L 74 20 L 102 15 L 130 45 L 158 50 L 186 20 L 205 20 L 205 105"
-            stroke-opacity="1" stroke="#8BC34A" fill="#4CAF50"
+            stroke-opacity="0.7" stroke="white" fill="#29b6f6"
             fill-opacity="1" stroke-width="2" stroke-linejoin="round"/>
 
-        <circle cx="18" cy="98" r="2" fill="red"/>
+        <!--<circle cx="18" cy="98" r="2" fill="red"/>
         <circle cx="46" cy="98" r="2" fill="red"/>
         <circle cx="74" cy="98" r="2" fill="red"/>
         <circle cx="102" cy="98" r="2" fill="red"/>
         <circle cx="130" cy="98" r="2" fill="red"/>
         <circle cx="158" cy="98" r="2" fill="red"/>
-        <circle cx="186" cy="98" r="2" fill="red"/>
+        <circle cx="186" cy="98" r="2" fill="red"/>-->
         
       </svg>
 
