--- a/src/sib-week.html
+++ b/src/sib-week.html
@@ -26,6 +26,7 @@
         @apply(--layout-wrap);
         width: 100%;
         /*border: solid 1px;*/
+        background-color: var(--paper-light-blue-400);
       }
 
       .tile {
@@ -84,6 +85,15 @@
       svg {
         width: 100vw;
         height: 50vw;
+        background-color: var(--paper-light-blue-300);
+      }
+
+      svg path {
+        stroke-opacity: 0.7;
+        stroke: white;
+        fill: var(--paper-light-blue-400);
+        stroke-width: 2;
+        stroke-linejoin: round;
       }
     </style>
 
@@ -95,9 +105,7 @@
             stroke-opacity="1" stroke="#8BC34A" fill="#4CAF50"
             fill-opacity="1" stroke-width="2" stroke-linejoin="round"/>                -->
 
-        <path d="M-5 105 L0 10 L 18 10 L 46 40 L 74 20 L 102 15 L 130 45 L 158 50 L 186 20 L 205 20 L 205 105"
-            stroke-opacity="0.7" stroke="white" fill="#29b6f6"
-            fill-opacity="1" stroke-width="2" stroke-linejoin="round"/>
+        <path d="M-5 105 L0 10 L 18 10 L 46 40 L 74 20 L 102 15 L 130 45 L 158 50 L 186 20 L 205 20 L 205 105"/>
 
         <!--<circle cx="18" cy="98" r="2" fill="red"/>
         <circle cx="46" cy="98" r="2" fill="red"/>
