--- a/src/sib-week.html
+++ b/src/sib-week.html
@@ -147,17 +147,13 @@
             { time: '09:11', date: 'Su 09' },
           ]
         },
-        path: {
-          type: String,
-          value: "M-5 105 L0 10 L 18 10 L 46 40 L 74 76 L 102 35 L 130 45 L 158 50 L 186 20 L 205 20 L 205 105"
-        },
         coords: {
           value: [
-            { x: 18, y: 10 },
+            { x: 18, y: 30 },
             { x: 46, y: 40 },
             { x: 74, y: 76 },
             { x: 102, y: 35 },
-            { x: 130, y: 45 },
+            { x: 130, y: 5 },
             { x: 158, y: 50 },
             { x: 186, y: 20 },
           ]
@@ -165,7 +161,7 @@
       },
 
       observers: [
-        '_render(coords)'
+        '_render(coords.*)'
       ],
 
       _render: function() {
@@ -176,7 +172,7 @@
         }
 
         var path = document.createElementNS('http://www.w3.org/2000/svg', 'path');
-        path.setAttribute('d', this.path);
+        path.setAttribute('d', this._getPath());
         svg.appendChild(path);        
 
         for (i = 0; i < this.coords.length; i++) {
@@ -185,6 +181,21 @@
           circle.setAttribute('cy', this.coords[i].y);
           svg.appendChild(circle);
         }
+      },
+
+      _getPath: function() {
+        if (!this.coords || !this.coords.length) return '';
+
+        var y0 = this.coords[0].y;
+        var p = 'M-5 ' + y0;
+
+        for (var i = 0; i < this.coords.length; i++) {
+          var c = this.coords[i];
+          p += ' L' + c.x + ' ' + c.y;
+        }
+
+        p += ' h100 v500 h-500';
+        return p;
       }
 
     });
