--- a/src/sib-app.html
+++ b/src/sib-app.html
@@ -73,7 +73,7 @@
 
     <sib-sky></sib-sky>
 
-    <sib-week list="[[list]]" on-track="track"></sib-week>
+    <sib-week list="[[list]]"></sib-week>
 
     <div class="layout vertical center more">
       
