--- a/src/sib-week.html
+++ b/src/sib-week.html
@@ -149,13 +149,13 @@
       properties: {
         items: {
           value: [
-            { time: '07:20', date: 'Mo 03' },
-            { time: '08:05', date: 'Tu 04' },
-            { time: '  -  ', date: 'We 05' },
-            { time: '07:22', date: 'Th 06' },
-            { time: '07:20', date: 'Fr 07' },
-            { time: '09:43', date: 'Sa 08' },
-            { time: '09:11', date: 'Su 09' },
+            { time: '07:20', date: 'M' },
+            { time: '08:05', date: 'T' },
+            { time: '  -  ', date: 'W' },
+            { time: '07:22', date: 'OCT 06' },
+            { time: '07:20', date: 'F' },
+            { time: '09:43', date: 'S' },
+            { time: '09:11', date: 'S' },
           ]
         },
         coords: {
