Add background gradient

--- a/src/sib-app.html
+++ b/src/sib-app.html
@@ -15,36 +15,7 @@
     <style include="iron-flex iron-flex-alignment">
       :host {
         display: block;
-        background-color: var(--paper-light-blue-300);
-      }
-
-      .sky {
-        height: 250px; 
-        position: relative;
-        margin-bottom: 50px;
-      }
-
-      sib-sun {
-        position: absolute;
-        top: 10%;
-        left: 5%;
-        z-index: 20;
-        --sky-sun-size: 150px;
-      }
-
-      sib-cloud.one {
-        position: absolute;
-        top: 15%;
-        right: 5%;
-        z-index: 40;
-        --sky-cloud-size: 80px;
-      }
-
-      sib-cloud.two {
-        position: absolute;
-        top: 70%;
-        left: 35%;
-        z-index: 40;
+        background: linear-gradient(var(--paper-light-blue-200), var(--paper-light-blue-600) 40%) 
       }
 
       paper-button {
