--- a/src/sib-week.html
+++ b/src/sib-week.html
@@ -15,7 +15,7 @@
         color: white;
         display: block;
         width: 100%;
-        @apply(--layout-horizontal);
+        @apply(--layout-verical);
         @apply(--layout-center-justified);
       }
 
@@ -67,16 +67,6 @@
         /*border-bottom: solid 1px;*/
       }
 
-      .marker {
-        display: none;
-        border-left-style: solid;
-        border-left-width: 0;
-        margin-left: 20px;
-        height: 4px;
-        /*opacity: 0.7;*/
-        color: var(--paper-amber-300);
-      }
-
       .tile.today {
         width: 286px;
         height: 60px;
@@ -85,7 +75,8 @@
       svg {
         width: 100vw;
         height: 50vw;
-        background-color: var(--paper-light-blue-300);
+        display: block;
+        /*background-color: var(--paper-light-blue-300);*/
       }
 
       svg path {
@@ -117,13 +108,12 @@
       }
     </style>
 
+    <svg id="svg"
+      xmlns="http://www.w3.org/2000/svg" version="1.1" 
+      viewBox="0 0 200 100">        
+    </svg>
+
     <div class="container">
-
-      <svg id="svg"
-        xmlns="http://www.w3.org/2000/svg" version="1.1" 
-        viewBox="0 0 200 100">        
-      </svg>
-
       <template is="dom-repeat" items="[[items]]">
         <div class$="tile [[item.klass]]">
           <!--<span class="time">[[item.time]]</span>-->
@@ -134,8 +124,7 @@
       <!--<div class="tile today">
         <span class="date">[[item.date]]</span>
         <span class="time">[[item.time]]</span>
-      </div>    -->
-        
+      </div>    -->        
 
     </div>
 
