--- a/src/sib-week.html
+++ b/src/sib-week.html
@@ -26,7 +26,7 @@
         @apply(--layout-wrap);
         width: 100%;
         /*border: solid 1px;*/
-        background-color: var(--paper-light-blue-400);
+        background-color: var(--primary-color);
       }
 
       .tile {
@@ -82,7 +82,7 @@
       svg path {
         stroke-opacity: 0.7;
         stroke: white;
-        fill: var(--paper-light-blue-400);
+        fill: var(--primary-color);
         stroke-width: 2;
         stroke-linejoin: round;
       }
