--- a/src/sib-week.html
+++ b/src/sib-week.html
@@ -15,8 +15,9 @@
         color: white;
         display: block;
         width: 100%;
-        @apply(--layout-verical);
+        @apply(--layout-vertical);
         @apply(--layout-center-justified);
+        @apply(--layout-center);
       }
 
       .container {
@@ -47,13 +48,12 @@
         /*background: rgba(255, 100, 100, 0.15);*/
       }
 
-      .time {
+      /*.time {
         @apply(--paper-font-common-base);
         font-size: 17px;
         font-weight: 300;
         text-align: center;
-        /*line-height: 36px;*/
-      }
+      }*/
 
       .date {
         @apply(--paper-font-common-base);
@@ -106,7 +106,30 @@
         fill-opacity: 0.2;
         text-anchor: middle;
       }
+
+      .now {
+        @apply(--layout-vertical);
+        @apply(--layout-center-justified);
+        @apply(--layout-center);
+        @apply(--paper-font-common-base);
+        font-size: 27px;
+        font-weight: 400;
+        border-radius: 50%;
+        background-color: blue;
+        height: 100px;
+        width: 100px;
+      }
+
+      .now .time {
+        font-size: 22px;
+        font-weight: 300;
+      }
     </style>
+
+    <div class="now">
+      <span>I'm Up!</span>
+      <span class="time">12:29:34</span>
+    </div>
 
     <svg id="svg"
       xmlns="http://www.w3.org/2000/svg" version="1.1" 
