--- a/src/sib-week.html
+++ b/src/sib-week.html
@@ -115,7 +115,7 @@
         font-size: 27px;
         font-weight: 400;
         border-radius: 50%;
-        background-color: blue;
+        background-color: var(--primary-color-dark);        
         height: 100px;
         width: 100px;
       }
