--- a/src/sib-week.html
+++ b/src/sib-week.html
@@ -28,6 +28,7 @@
         width: 100%;
         /*border: solid 1px;*/
         background-color: var(--primary-color);
+        padding-bottom: 20px;
       }
 
       .tile {
@@ -63,7 +64,7 @@
         /*width: 100%;*/
         text-align: center;
         /*padding-right: 10px;*/
-        opacity: 0.7;
+        opacity: 0.8;
         /*border-bottom: solid 1px;*/
       }
 
@@ -164,7 +165,7 @@
             { time: '07:20', date: 'M' },
             { time: '08:05', date: 'T' },
             { time: '  -  ', date: 'W' },
-            { time: '07:22', date: 'OCT 06' },
+            { time: '07:22', date: 'T' },
             { time: '07:20', date: 'F' },
             { time: '09:43', date: 'S' },
             { time: '09:11', date: 'S' },
@@ -176,9 +177,9 @@
             { x:  46, y: 40, l: 'T' },
             { x:  74, y: 76, l: 'W' },
             { x: 102, y: 35, l: 'T' },
-            { x: 130, y:  5, l: 'F' },
+            { x: 130, y: 90, l: 'F' },
             { x: 158, y: 50, l: 'S' },
-            { x: 186, y: 20, l: 'S' },
+            { x: 186, y: 10, l: 'S' },
           ]
         }
       },
