--- a/src/sib-week.html
+++ b/src/sib-week.html
@@ -126,11 +126,11 @@
         font-weight: 300;
       }
     </style>
-
+<!--
     <div class="now">
       <span>I'm Up!</span>
       <span class="time">12:29:34</span>
-    </div>
+    </div>-->
 
     <svg id="svg"
       xmlns="http://www.w3.org/2000/svg" version="1.1" 
