--- a/src/sib-panel.html
+++ b/src/sib-panel.html
@@ -4,6 +4,8 @@
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bower_components/neon-animation/neon-animation-runner-behavior.html">
+<link rel="import" href="beat-animation.html">
 
 <dom-module id="sib-panel">
   <template>
@@ -21,6 +23,7 @@
         @apply(--layout-vertical);
         @apply(--layout-center-justified);
         @apply(--layout-center);
+        z-index: 1;
         width: 160px;
         height: 160px;
         margin: 0 auto;
@@ -43,9 +46,20 @@
         font-size: 28px;
         font-weight: 300;
       }
+
+      .beat {
+        opacity: 0;
+        position: absolute;
+        z-index: 0;
+        background: white;
+        border-radius: 50%;
+        height: 100%;
+        width: 100%;
+      }
     </style>
 
     <div class="circle">
+      <div class="beat"></div>
       <span class="text">I'm up!</span>
       <span class="time">16:52:31</span>
     </div>
@@ -58,6 +72,30 @@
       is: 'sib-panel',
 
       properties: {
+        animationConfig: {
+          value: function() {
+            return {
+              'entry': {
+                name: 'beat-animation',
+                node: this.$$(".circle .beat"),
+                timing: {
+                  duration: 1000,
+                  iterations: 'Infinity',
+                }
+              }              
+            }
+          }      
+        }
+      },
+
+      behaviors: [
+        Polymer.NeonAnimationRunnerBehavior
+      ],
+
+      ready: function () {
+        this.async(function () {
+          this.playAnimation('entry');
+        }, 1);        
       },
 
     });
