--- a/src/beat-animation.html
+++ b/src/beat-animation.html
@@ -17,8 +17,8 @@
 
       this._effect = new KeyframeEffect(node, [
         {'transform': 'scale(1)', 'opacity' : '0'},
-        {'transform': 'scale(1)', 'opacity' : '0.1'},
-        {'transform': 'scale(2)', 'opacity' : '0'}
+        {'transform': 'scale(1)', 'opacity' : '0.1', offset: 0.3},
+        {'transform': 'scale(2.5)', 'opacity' : '0'}
       ], this.timingFromConfig(config));
 
       if (config.transformOrigin) {
