--- a/src/sib-panel.html
+++ b/src/sib-panel.html
@@ -32,7 +32,7 @@
         border-radius: 50%;
         margin: 80px 10px;
         background-color: rgba(255,255,255, 0.2);
-        /*box-shadow: 0 1px 8px rgba(34,34,34,0.3),inset 0 1px 8px rgba(34,34,34,0.3);*/
+        box-shadow: 0 1px 8px rgba(34,34,34,0.3);
       }
 
       .text {
