Add more axis space

--- a/src/sib-sparkline.html
+++ b/src/sib-sparkline.html
@@ -21,7 +21,7 @@
         @apply(--layout-center);
         width: 100%;
         background-color: var(--primary-color);
-        padding-bottom: 10px;
+        padding: 10px 0;
       }
 
       .label {
